--- a/app/src/main/res/layout/activity_result_view.xml
+++ b/app/src/main/res/layout/activity_result_view.xml
@@ -34,7 +34,7 @@
         android:autoLink="email"
         android:fontFamily="casual"
         android:gravity="center"
-        android:text="wizeatapp@gmail.com"
+        android:text="wiseatapp@gmail.com"
         android:textSize="18sp"
         android:textStyle="bold" />
 
